headers in-memory cache

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,9 @@
 akka {
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
     loglevel = DEBUG
     actor {
         debug {
-            lifecycle = on
+            lifecycle = off
             receive = off
             unhandled = off
             router-misconfiguration = off
