message from HeadAsyncHandler become deadletter

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ akka {
     loglevel = DEBUG
     actor {
         debug {
-            lifecycle = off
+            lifecycle = on
             receive = off
             unhandled = off
             router-misconfiguration = off
