pure actor solution now works

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,9 @@
 akka {
     loggers = ["akka.event.slf4j.Slf4jLogger"]
-    loglevel = DEBUG
+    loglevel = debug
     actor {
         debug {
-            lifecycle = on
+            lifecycle = off
             receive = off
             unhandled = off
             router-misconfiguration = off
