persistent config data

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,4 +21,7 @@ akka {
 #           throughput = 20
 #        }
     }
+    persistence {
+        journal.leveldb.dir = ${HOME}"/.repox/journal"
+    }
 }
