--- a/src/main/resources/admin/bower.json
+++ b/src/main/resources/admin/bower.json
@@ -19,6 +19,8 @@
   ],
   "dependencies": {
     "semantic-ui": "~1.1.0",
-    "vue": "~0.11.3"
+    "angular": "~1.3.5",
+    "angular-route": "~1.3.5",
+    "underscore": "*"
   }
 }
