--- a/src/main/resources/admin/bower.json
+++ b/src/main/resources/admin/bower.json
@@ -19,8 +19,9 @@
   ],
   "dependencies": {
     "semantic-ui": "~1.2.0",
-    "angular": "~1.3.5",
-    "angular-route": "~1.3.5",
+    "angular": "~1.3.6",
+    "angular-route": "~1.3.6",
+    "angular-cookies": "~1.3.6",
     "underscore": "*"
   }
 }
