--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -30,6 +30,12 @@ akka {
     #        }
   }
   persistence {
-    journal.leveldb.dir = ${HOME}"/.repox/journal"
+    journal {
+      plugin = "akka.persistence.journal.leveldb"
+      leveldb.dir = ${HOME}"/.repox/journal"
+    }
+    snapshot-store {
+      plugin = "akka.persistence.journal.leveldb"
+    }
   }
 }
