PersistentActor does not auto recover

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -36,6 +36,7 @@ akka {
     }
     snapshot-store {
       plugin = "akka.persistence.journal.leveldb"
+      leveldb.dir = ${HOME}"/.repox/journal"
     }
   }
 }
