wrong configuration cause auto recovery not working.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,8 +35,8 @@ akka {
       leveldb.dir = ${HOME}"/.repox/journal"
     }
     snapshot-store {
-      plugin = "akka.persistence.journal.leveldb"
-      leveldb.dir = ${HOME}"/.repox/journal"
+      plugin = "akka.persistence.snapshot-store.local"
+      local.dir = ${HOME}"/.repox/snapshots"
     }
   }
 }
