separate ExpirationManager state to two parts: in-memory and persistent

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,7 +13,7 @@ akka {
     }
     serialization-bindings {
       "java.io.Serializable" = none
-      "com.gtan.repox.config.Cmd" = jsonSerializer
+      "com.gtan.repox.config.Jsonable" = jsonSerializer
       "com.gtan.repox.config.Evt" = jsonSerializer
     }
     #        default-dispatcher {
