windows support #24 HOMEPATH config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,11 +32,11 @@ akka {
   persistence {
     journal {
       plugin = "akka.persistence.journal.leveldb"
-      leveldb.dir = ${HOME}"/.repox/journal"
+      leveldb.dir = ${?HOME}${?HOMEPATH}"/.repox/journal"
     }
     snapshot-store {
       plugin = "akka.persistence.snapshot-store.local"
-      local.dir = ${HOME}"/.repox/snapshots"
+      local.dir = ${?HOME}${?HOMEPATH}"/.repox/snapshots"
     }
   }
 }
