--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = debug
+  jvm-exit-on-fatal-error = off
   actor {
     debug {
       lifecycle = off
